--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: moneysavior
   profiles:
-    active: local, secrets
+    active: railway, secrets
 
 springdoc:
   swagger-ui:
