--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,4 +14,5 @@ springdoc:
 openai:
   api:
     url: https://api.openai.com
-    model: gpt-4.1-nano-2025-04-14
+    model: gpt-4.1-mini
+#    model: gpt-4.1-nano-2025-04-14
